make Poquoson image responsive

--- a/public_html/index.html
+++ b/public_html/index.html
@@ -188,7 +188,7 @@
     </button>
     <div class="collapsible_content">
         <p style="text-align: center;">
-            <img src="./images/poquoson-2025.jpg">
+            <img src="./images/poquoson-2025.jpg" class="responsive">
         </p>
     </div>
     <button type="button" class="collapsible_text" onclick="toggleCollapsible(this)">
