--- a/public_html/index.html
+++ b/public_html/index.html
@@ -130,7 +130,7 @@
         <p>
             Don't miss out on this fantastic opportunity to lead and inspire young swimmers in our community! We look
             forward to
-            welcoming enthusiastic coaches to the Marlbank Pool family. Let's make waves together! 🌊🏊🏊
+            welcoming enthusiastic coaches to the Marlbank Pool family. Let's make waves together!
         </p>
     </div>
     <button type="button" class="collapsible_text" onclick="toggleCollapsible(this)">
@@ -179,7 +179,7 @@
         <p>
             Don't miss out on this exciting chance to make a splash as part of our coaching staff! We look forward to
             welcoming
-            you aboard the Riverdale Rays family. Go Rays! 🏊🏊
+            you aboard the Riverdale Rays family. Go Rays!
         </p>
     </div>
     <button type="button" class="collapsible_text" onclick="toggleCollapsible(this)">
