add Elizabeth Lake 2025 coach listing

--- a/public_html/index.html
+++ b/public_html/index.html
@@ -72,6 +72,109 @@
         </p>
     </div>
     <button type="button" class="collapsible_text" onclick="toggleCollapsible(this)">
+        Elizabeth Lake
+        <span class="collapsible_icon">+</span>
+    </button>
+    <div class="collapsible_content">
+        <p>Are you a passionate swim coach looking for an exciting opportunity to lead and inspire a team of dedicated
+            athletes?
+            Do you have a knack for cultivating a positive and supportive environment where swimmers can thrive?
+            Elizabeth Lake
+            swim team in Hampton is seeking a Head Coach and Assistant Coaches for the upcoming summer season!</p>
+        <p>About Us: Our swim team is located near the Fox Hill are in Hampton. We take pride in our commitment to
+            fostering a
+            welcoming and inclusive environment where swimmers of all ages and abilities can develop their skills and
+            love for
+            the sport. Our team values sportsmanship, camaraderie, and personal growth both in and out of the pool.</p>
+
+        <p>Positions Available:</p>
+
+        <ol>
+            <li>Head Coach:</li>
+            <ul>
+                <li>Lead and oversee all aspects of the swim team program</li>
+                <li>Develop and implement training plans to help swimmers reach their full potential</li>
+                <li>Provide technical instruction and feedback to improve stroke technique</li>
+                <li>Coordinate and attend swim meets, practices, and team events</li>
+                <li>Serve as a mentor and role model for athletes and assistant coaches</li>
+            </ul>
+            <li>Assistant Swim Coaches:</li>
+            <ul>
+                <li>Assist the Head Coach in planning and executing practices and workouts</li>
+                <li>Provide individualized feedback and support to swimmers during training sessions</li>
+                <li>Help organize and manage swim meets, events, and team activities</li>
+                <li>Foster a positive and encouraging atmosphere for swimmers to learn and grow</li>
+            </ul>
+        </ol>
+
+        <p>Qualifications:</p>
+        <ul>
+            <li>Passion for swimming and coaching</li>
+            <li>Previous coaching or competitive swimming experience preferred (for Head Coach position)</li>
+            <li>Strong communication, leadership, and organizational skills</li>
+            <li>Ability to work well with swimmers of all ages and skill levels</li>
+            <li>CPR and lifeguard certification (or willingness to obtain)</li>
+        </ul>
+        <p>
+            If you're ready to make a splash as part of the Elizabeth Lake coaching team, please contact Vanessa
+            Smeltzer at
+            <a href="mailto:azsmeltzer@gmail.com">azsmeltzer@gmail.com</a>
+        </p>
+        <p>
+            Don't miss out on this fantastic opportunity to lead and inspire young swimmers in our community! We look
+            forward to
+            welcoming enthusiastic coaches to the Elizabeth Lake pool family.
+        </p>
+    </div>
+    <button type="button" class="collapsible_text" onclick="toggleCollapsible(this)">
+        Kiln Creek
+        <span class="collapsible_icon">+</span>
+    </button>
+    <div class="collapsible_content">
+        <p>Are you enthusiastic, love to teach and love the water? Come be a swim coach for Kiln Creek Dolphins this
+            summer.
+            We are currently looking to hire Assistant Coaches and Junior coaches this summer.
+        </p>
+        <p><strong>About us:</strong> Kiln Creek Dolphins is a dedicated swim program nestled in the Kiln Creek
+            Homeowners
+            association in Yorktown/Newport News. This community has 21 villages and is home to the Kiln Creek
+            Dolphins.
+        </p>
+        <h3>Positions Available: </h3>
+        <h4>Assistant Coach:</h4>
+        <h5>Overview</h5>
+        <p>Position is responsible for assisting the head and junior assistant coaches with organizing the Kiln
+            Creek Swim
+            Team Inc. program. Position assists with conducting practices, motivating swimmers, and instructing
+            athletes in strategies and techniques.</p>
+        <h5>Qualifications</h5>
+        <ul>
+            <li>Passion for swimming and teaching</li>
+            <li>Previous coaching or competitive swimming experience preferred</li>
+            <li>Strong communication, leadership, and organizational skills</li>
+            <li>Ability to work well with swimmers of all ages and skill levels</li>
+            <li>CPR and lifeguard certification (or willingness to obtain)</li>
+        </ul>
+        <h4>Junior Coach:</h4>
+        <h5>Overview</h5>
+        <p>Position is responsible for assisting the head and assistant coaches with organizing the Kiln Creek Swim
+            Team Inc.
+            program. Position assists with conducting practices, motivating swimmers, and instructing athletes in
+            strategies and techniques</p>
+        <h5>Qualifications</h5>
+        <ul>
+            <li>Passion for swimming and teaching</li>
+            <li>Previous competitive swimming experience or swim instructor experience preferred</li>
+            <li>Strong communication, leadership, and organizational skills</li>
+            <li>Ability to work well with swimmers of all ages and skill levels</li>
+            <li>CPR and lifeguard certification (or willingness to obtain)</li>
+        </ul>
+
+
+        <p>If you want to have a great opportunity and a fun summer coaching, please contact Justin Hinson: <a
+                href="mailto:justin.r.hinson3@gmail.com">justin.r.hinson3@gmail.com</a>. </p>
+    </div>
+    <button type="button" class="collapsible_text" onclick="toggleCollapsible(this)">
         Marlbank Mudtoads
         <span class="collapsible_icon">+</span>
     </button>
@@ -134,6 +237,15 @@
         </p>
     </div>
     <button type="button" class="collapsible_text" onclick="toggleCollapsible(this)">
+        Poquoson Barracudas
+        <span class="collapsible_icon">+</span>
+    </button>
+    <div class="collapsible_content">
+        <p style="text-align: center;">
+            <img src="./images/poquoson-2025.jpg" class="responsive">
+        </p>
+    </div>
+    <button type="button" class="collapsible_text" onclick="toggleCollapsible(this)">
         Riverdale Rays
         <span class="collapsible_icon">+</span>
     </button>
@@ -180,15 +292,6 @@
             Don't miss out on this exciting chance to make a splash as part of our coaching staff! We look forward to
             welcoming
             you aboard the Riverdale Rays family. Go Rays!
-        </p>
-    </div>
-    <button type="button" class="collapsible_text" onclick="toggleCollapsible(this)">
-        Poquoson Barracudas
-        <span class="collapsible_icon">+</span>
-    </button>
-    <div class="collapsible_content">
-        <p style="text-align: center;">
-            <img src="./images/poquoson-2025.jpg" class="responsive">
         </p>
     </div>
     <button type="button" class="collapsible_text" onclick="toggleCollapsible(this)">
@@ -246,54 +349,6 @@
                 href="mailto:rmmrswimteam@gmail.com">rmmrswimteam@gmail.com</a>. </p>
         <p>Don't miss out on this exciting chance to make a splash as part of our coaching staff! We look forward to
             welcoming you aboard the Running Man Manta Rays family. Go Manta Rays! </p>
-    </div>
-    <button type="button" class="collapsible_text" onclick="toggleCollapsible(this)">
-        Kiln Creek
-        <span class="collapsible_icon">+</span>
-    </button>
-    <div class="collapsible_content">
-        <p>Are you enthusiastic, love to teach and love the water? Come be a swim coach for Kiln Creek Dolphins this
-            summer.
-            We are currently looking to hire Assistant Coaches and Junior coaches this summer.
-        </p>
-        <p><strong>About us:</strong> Kiln Creek Dolphins is a dedicated swim program nestled in the Kiln Creek
-            Homeowners
-            association in Yorktown/Newport News. This community has 21 villages and is home to the Kiln Creek
-            Dolphins.
-        </p>
-        <h3>Positions Available: </h3>
-        <h4>Assistant Coach:</h4>
-        <h5>Overview</h5>
-        <p>Position is responsible for assisting the head and junior assistant coaches with organizing the Kiln
-            Creek Swim
-            Team Inc. program. Position assists with conducting practices, motivating swimmers, and instructing
-            athletes in strategies and techniques.</p>
-        <h5>Qualifications</h5>
-        <ul>
-            <li>Passion for swimming and teaching</li>
-            <li>Previous coaching or competitive swimming experience preferred</li>
-            <li>Strong communication, leadership, and organizational skills</li>
-            <li>Ability to work well with swimmers of all ages and skill levels</li>
-            <li>CPR and lifeguard certification (or willingness to obtain)</li>
-        </ul>
-        <h4>Junior Coach:</h4>
-        <h5>Overview</h5>
-        <p>Position is responsible for assisting the head and assistant coaches with organizing the Kiln Creek Swim
-            Team Inc.
-            program. Position assists with conducting practices, motivating swimmers, and instructing athletes in
-            strategies and techniques</p>
-        <h5>Qualifications</h5>
-        <ul>
-            <li>Passion for swimming and teaching</li>
-            <li>Previous competitive swimming experience or swim instructor experience preferred</li>
-            <li>Strong communication, leadership, and organizational skills</li>
-            <li>Ability to work well with swimmers of all ages and skill levels</li>
-            <li>CPR and lifeguard certification (or willingness to obtain)</li>
-        </ul>
-
-
-        <p>If you want to have a great opportunity and a fun summer coaching, please contact Justin Hinson: <a
-                href="mailto:justin.r.hinson3@gmail.com">justin.r.hinson3@gmail.com</a>. </p>
     </div>
 
     <script>
